cointicker fixed. mainchain sidechain button issue,

--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -425,7 +425,7 @@
                                             DisplayMemberBinding="{Binding Path=Type}"  />
 
                                         <GridViewColumn  Width="350" 
-                                            DisplayMemberBinding="{Binding Path=Amount}"  />
+                                            DisplayMemberBinding="{Binding Path= AmountWithUnit}"  />
                                         <GridViewColumn  Width="250" 
                                             DisplayMemberBinding="{Binding Path=Timestamp}"  />
 
