--- a/src/XelsDesktopWalletApp/Views/Pages/HistoryPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/HistoryPage.xaml
@@ -22,7 +22,7 @@
                                             DisplayMemberBinding="{Binding Path=Type}"  />
 
                                 <GridViewColumn  Width="300" 
-                                            DisplayMemberBinding="{Binding Path=Amount}"  />
+                                            DisplayMemberBinding="{Binding Path=AmountWithUnit}"  />
                                 <GridViewColumn  Width="250" 
                                             DisplayMemberBinding="{Binding Path=Timestamp}"  />
                             <GridViewColumn>
