--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/MainchainPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/MainchainPage.xaml
@@ -37,10 +37,10 @@
                             <Border Grid.Row="0">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width=".6*" />
-                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="2*" />
                                         <ColumnDefinition Width=".5*" />
+                                        <ColumnDefinition Width="0.7*" />
+                                        <!--  <ColumnDefinition Width=".5*" />-->
                                     </Grid.ColumnDefinitions>
                                     <Border Grid.Column="0">
                                         <Label Content="Amount"  RenderTransformOrigin="1.158,-0.076" />
@@ -52,10 +52,10 @@
                                         <Label  x:Name="textAvailableCoin" HorizontalAlignment="Left" 
                            RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
                                     </Border>
-                                    <Border Grid.Column="3">
+                                    <!--<Border Grid.Column="3">
                                         <Label  Grid.Column="3" x:Name="textCoinType" 
                           />
-                                    </Border>
+                                    </Border>-->
                                 </Grid>
                             </Border>
 
@@ -139,7 +139,7 @@
                     </Button>
 
                     <Button Grid.Column="1" x:Name="SendButton" Click="sendButton_Click"  Content="Send" Padding="2" Margin="0 0 5 0"
-                        Background="#FF53E253"
+                        Background="Green"
                             Foreground="White">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
