--- a/src/XelsDesktopWalletApp/Views/Pages/CreateWalletPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/CreateWalletPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
+       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CreateWalletPage">
@@ -24,7 +25,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0"  Content="Name" Margin="5 0" FontSize="13" FontWeight="DemiBold"   />
-                <TextBox Grid.Row="1" Name="name" MaxLength="24"  Padding="5"  AutomationProperties.HelpText="Enter a wallet name." />
+                <TextBox Grid.Row="1" Name="name" MaxLength="24"  Padding="5"  materialDesign:HintAssist.Hint="Enter a wallet name."  materialDesign:HintAssist.IsFloating="False" />
 
             </Grid>
         </Border>
@@ -36,7 +37,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Margin="5 0" Content="Password" FontSize="13" FontWeight="DemiBold"  />
-                <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Padding="5"                                  AutomationProperties.HelpText="Enter password."  />
+                <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Padding="5" materialDesign:HintAssist.Hint="Enter Password"  materialDesign:HintAssist.IsFloating="False"  />
 
             </Grid>
         </Border>
@@ -49,7 +50,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Margin="5 0" Content="Confirm password" FontSize="13" FontWeight="DemiBold" />
-                <PasswordBox Grid.Row="1" x:Name="repassword"  PasswordChar="*" Padding="5" />
+                <PasswordBox Grid.Row="1" x:Name="repassword"  PasswordChar="*" Padding="5" materialDesign:HintAssist.Hint="Confirm password"  materialDesign:HintAssist.IsFloating="False" />
 
             </Grid>
         </Border>
@@ -62,7 +63,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Margin="5 0" Content="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" />
-                <TextBox Grid.Row="1" Name="passphrase" Padding="5" />
+                <TextBox Grid.Row="1" Name="passphrase" Padding="5" materialDesign:HintAssist.Hint="Enter an optional Passphrase."  materialDesign:HintAssist.IsFloating="False" />
 
             </Grid>
         </Border>
