--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/MainchainPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/MainchainPage.xaml
@@ -75,7 +75,7 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Sidechain destination address" RenderTransformOrigin="1.158,-0.076"/>
+                            <Label Grid.Row="0" Content="Destination Address" RenderTransformOrigin="1.158,-0.076"/>
 
                             <TextBox Grid.Row="1" x:Name="DestinationAddressText" 
                           TextChanged="CalculateTransactionFee_OnChange"
@@ -98,7 +98,7 @@
                             <Label Grid.Row="0" Content="Transaction fee"  RenderTransformOrigin="1.158,-0.076" />
                             <TextBox Grid.Row="1"  x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
                             <Label Grid.Row="2" x:Name="TransactionFeeTypeLabel"  RenderTransformOrigin="1.158,-0.076" />
-                            <TextBlock Grid.Row="3" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
+                            <TextBlock x:Name="TransactionWarningLabel" Grid.Row="3" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
                         </Grid>
                     </Border>
 
