--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -8,67 +8,76 @@
               d:DesignHeight="700" d:DesignWidth="900"
              HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Initialized="UserControl_Initialized" >
 
-    <!--<StackPanel Background="White">-->
+    <StackPanel Background="White">
     <Grid>
-        <Rectangle Fill="WhiteSmoke" Opacity=".5" MouseDown="Rectangle_MouseDown" />
-        <Border CornerRadius="10"  Background="White" Height="550" Width="700">
-            <Grid Margin="5,5,5,5">
-
+        <Grid  Background="White">
+            <Rectangle Fill="WhiteSmoke" Opacity=".5" MouseDown="Rectangle_MouseDown" />
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"  />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-
-
-                <Label Grid.Row="0" Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold"  FontSize="25"
-                    RenderTransformOrigin="0.515,-0.184" Margin="0,0,0,59" Width="94" />
+                <Border Grid.Row="0" Margin="0,0,0,79">
+                    <Label Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold"  FontSize="20"
+                    RenderTransformOrigin="0.515,-0.184" />
+                </Border>
                 <!-- buttons   -->
-                <Button Grid.Row="1" x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top" 
-                        Background="Green" RenderTransformOrigin="0.174,0.571" Margin="5,5,446,0" Height="32" >
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-
-                <Button Grid.Row="1" Content="SELS" Click="selsButton_Click" 
+                <Border Grid.Row="1">
+                    <Grid Margin="100 5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Border Grid.Column="0" Margin="2 0 0 0">
+                            <Button x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top"
+                        Background="Green" RenderTransformOrigin="0.174,0.571" Margin="0,2,0,0" >
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
+                        </Border>
+                        <Border Grid.Column="1" Margin="2 0">
+                            <Button Content="SELS" Click="selsButton_Click"
                         Background="Green"
-                       Foreground="White" Margin="244,5,220,81">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-
-                <Button Grid.Row="1" Content="BELS" Click="BelsButton_Click" 
-                        RenderTransformOrigin="2.423,0.568"  Background="Green"                        
-                        Foreground="White" FontWeight="Normal" Margin="470,5,10,81" >
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Frame  Grid.Row="1" Grid.RowSpan="3" x:Name="ReceiveContent" NavigationUIVisibility="Hidden" Margin="10,59,10,5" />
-
-                <Button Grid.Row="4" x:Name="Cancel" Click="Cancel_Click" Content="CANCEL"
-                        Background="Red" 
-                        Foreground="White" Margin="10,24,451,25" >
-                </Button>
-
-                <Button Grid.Row="4" x:Name="restoreButton" Click="restoreButton_Click" Content="OK"
-                        Background="Green" 
-                        Foreground="White" Margin="244,24,10,25" >
+                       Foreground="White" Margin="0,1,0,74">
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
+                        </Border>
+                        <Border Grid.Column="2" Margin="2 0">
+                            <Button Content="BELS" Click="BelsButton_Click"
+                        RenderTransformOrigin="2.423,0.568"  Background="Green"
+                        Foreground="White" FontWeight="Normal" Margin="0,1,0,74" >
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
+                        </Border>
+                    </Grid>
+                </Border>
+                <Border Grid.Row="2">
+                    <Frame x:Name="ReceiveContent" NavigationUIVisibility="Hidden" />
+                </Border>
+                <Border Grid.Row="3" Margin="100 2">
+                    <Button x:Name="restoreButton" Click="restoreButton_Click" Content="OK"
+                        Background="Green"
+                        Foreground="White" >
                     </Button>
-                
+                </Border>
             </Grid>
-        </Border>
+        </Grid>
     </Grid>
-    <!--</StackPanel>-->
+    </StackPanel>
 </UserControl>
