--- a/src/XelsDesktopWalletApp/Views/SendConfirmationSideChain.xaml
+++ b/src/XelsDesktopWalletApp/Views/SendConfirmationSideChain.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="XelsDesktopWalletApp.Views.SendConfirmationSideChain"
+﻿<UserControl x:Class="XelsDesktopWalletApp.Views.SendConfirmationSideChain"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
-        Title="SendConfirmationSideChain" Height="450" Width="800">
-    <StackPanel>
+          d:HorizontalAlignment="Stretch" d:VerticalAlignment="Stretch">
+    
+    <StackPanel Background="White">
+
+        <Rectangle Fill="AliceBlue" Opacity=".8" MouseDown="Rectangle_MouseDown" />
+        
+        
         <TextBlock Margin="0,1" Width="400" Height="109" FontSize="26" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Opacity="0.7"><Run/><LineBreak/><Run/><LineBreak/><Run Text="Sent"/></TextBlock>
 
         <StackPanel Orientation="Horizontal" Width="408">
@@ -53,4 +58,4 @@
 
         </Grid>
     </StackPanel>
-</Window>
+</UserControl>
