--- a/src/XelsDesktopWalletApp/Views/SendConfirmationSideChain.xaml
+++ b/src/XelsDesktopWalletApp/Views/SendConfirmationSideChain.xaml
@@ -1,17 +1,12 @@
-﻿<UserControl x:Class="XelsDesktopWalletApp.Views.SendConfirmationSideChain"
+﻿<Window x:Class="XelsDesktopWalletApp.Views.SendConfirmationSideChain"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
-          d:HorizontalAlignment="Stretch" d:VerticalAlignment="Stretch">
-    
-    <StackPanel Background="White">
-
-        <Rectangle Fill="AliceBlue" Opacity=".8" MouseDown="Rectangle_MouseDown" />
-        
-        
+        Title="SendConfirmationSideChain" Height="450" Width="800">
+    <StackPanel>
         <TextBlock Margin="0,1" Width="400" Height="109" FontSize="26" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Opacity="0.7"><Run/><LineBreak/><Run/><LineBreak/><Run Text="Sent"/></TextBlock>
 
         <StackPanel Orientation="Horizontal" Width="408">
@@ -58,4 +53,4 @@
 
         </Grid>
     </StackPanel>
-</UserControl>
+</Window>
