--- a/src/XelsDesktopWalletApp/Views/Pages/ExchangePage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/ExchangePage.xaml
@@ -42,7 +42,7 @@
                     <StackPanel Orientation="Vertical" Margin="0,10,-1,66"  Grid.Column="1" >
                         <Label Content="Amount" Height="16" Width="302" Foreground="#FF615858"
                                 FontFamily="Microsoft YaHei" FontSize="12" Padding="0"/>
-                        <TextBox x:Name="AmountTxt" 
+                        <TextBox x:Name="AmountTxt" KeyUp="AmountTxt_KeyUp"
                                      TextWrapping="Wrap" Width="300" MaxLength="24" Padding="2" 
                                      AutomationProperties.HelpText="Enter Amount." TextBlock.FontFamily="Microsoft YaHei Light" 
                                      FontFamily="Microsoft YaHei Light" FontSize="10"  BorderBrush="LimeGreen" Foreground="#FF615858" 
@@ -52,10 +52,13 @@
 
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="-1,56,0,41"  Grid.ColumnSpan="2" >
-                        <TextBlock x:Name="MessageTxt"  
+                        <!--<TextBlock x:Name="MessageTxt"  
                                        Text="{Binding ElementName=AmountTxt, Path=Text, StringFormat='You will get {0} XELS', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                       Height="16" Width="547" Foreground="Black"
-                                       FontFamily="Microsoft YaHei" FontSize="10" Padding="0" Margin="0"/>
+                                       Height="22" Width="578" Foreground="Black"
+                                       FontFamily="Microsoft YaHei" FontSize="13" Padding="0" Margin="0"/>-->
+
+                        <TextBlock x:Name="MessageTxt" Height="22" Width="578" Foreground="Black"
+                                       FontFamily="Microsoft YaHei" FontSize="13" Padding="0" Margin="0"/>
 
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="10,81,10,10"  Grid.ColumnSpan="2" >
