--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/SelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/SelsPage.xaml
@@ -5,9 +5,9 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages.SendPages"
       mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="SelsPage">
-
+    <StackPanel Background="White" Margin="100 5">
     <Grid Background="White" Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -47,12 +47,22 @@
             <Grid Margin="26,0,24,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" x:Name="sendButton" FontSize="20" Click="SendButton_Click"  Content="Send Now" Padding="2" 
+                <Button Grid.Column="0" x:Name="cencelButton" FontSize="20" Click="cencelButton_Click"  Content="Cencel" Padding="2" 
+                        Background="Red"  
+                        Foreground="White" Margin="0,54,0,54" >
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+                
+                <Button Grid.Column="1" x:Name="sendButton" FontSize="20" Click="SendButton_Click"  Content="Send Now" Padding="2" 
                         Background="Green"  
-                        Foreground="White" >
+                        Foreground="White" Margin="0,54,0,54" >
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -64,5 +74,5 @@
         </Border>
 
     </Grid>
-
+    </StackPanel>
 </Page>
