--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -8,11 +8,11 @@
               d:DesignHeight="700" d:DesignWidth="900"
              HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Initialized="UserControl_Initialized" >
 
-    <StackPanel Background="White">
+    <!--<StackPanel Background="White">-->
     <Grid>
-        <Grid  Background="White">
-            <Rectangle Fill="WhiteSmoke" Opacity=".5" MouseDown="Rectangle_MouseDown" />
-            <Grid>
+        <Rectangle Fill="WhiteSmoke" Opacity=".5" MouseDown="Rectangle_MouseDown" />
+        <Border CornerRadius="10"  Background="White" Height="550" Width="700">
+            <Grid Margin="5,5,5,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"  />
                     <RowDefinition Height="Auto" />
@@ -23,30 +23,18 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-
-
                 <Label Grid.Row="0" Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold" VerticalAlignment="Center"  VerticalContentAlignment="Center" FontSize="15"
                     RenderTransformOrigin="0.515,-0.184" Margin="0,0,0,0" Width="94" />
                 <!-- buttons   -->
-                <Border Grid.Row="1">
-                    <Grid Margin="100 5">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Margin="2 0 0 0">
-                            <Button x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top"
-                        Background="Green" RenderTransformOrigin="0.174,0.571" Margin="0,2,0,0" >
-                                <Button.Resources>
-                                    <Style TargetType="{x:Type Border}">
-                                        <Setter Property="CornerRadius" Value="5"/>
-                                    </Style>
-                                </Button.Resources>
-                            </Button>
-                        </Border>
-                        <Border Grid.Column="1" Margin="2 0">
-                            <Button Content="SELS" Click="selsButton_Click"
+                <Button Grid.Row="1" x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top"
+                        Background="Green" RenderTransformOrigin="0.174,0.571" Margin="5,5,446,0" Height="32" >
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+                <Button Grid.Row="1" Content="SELS" Click="selsButton_Click"
                         Background="Green"
                        Foreground="White" Margin="244,5,220,0">
                     <Button.Resources>
@@ -55,9 +43,8 @@
                         </Style>
                     </Button.Resources>
                 </Button>
-
-                <Button Grid.Row="1" Content="BELS" Click="BelsButton_Click" 
-                        RenderTransformOrigin="2.423,0.568"  Background="Green"                        
+                <Button Grid.Row="1" Content="BELS" Click="BelsButton_Click"
+                        RenderTransformOrigin="2.423,0.568"  Background="Green"
                         Foreground="White" FontWeight="Normal" Margin="470,5,10,0" >
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
@@ -65,22 +52,17 @@
                         </Style>
                     </Button.Resources>
                 </Button>
-               
                 <Frame  Grid.Row="2" Grid.RowSpan="4" x:Name="ReceiveContent" NavigationUIVisibility="Hidden" Margin="10,10,5,10" />
-
                 <Button Grid.Row="7" x:Name="Cancel" Click="Cancel_Click" Content="CANCEL"
-                        Background="Red" 
+                        Background="Red"
                         Foreground="White" Margin="10,24,451,25" >
                 </Button>
-
                 <Button Grid.Row="7" x:Name="restoreButton" Click="restoreButton_Click" Content="OK"
-                        Background="Green" 
+                        Background="Green"
                         Foreground="White" Margin="244,24,10,25" >
                 </Button>
-
             </Grid>
-        </Grid>
+        </Border>
     </Grid>
-
     <!--</StackPanel>-->
 </UserControl>
