--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="900"
-      Title="Dashboard" Loaded="Page_Loaded">
+      Title="Dashboard">
 
     <Grid x:Name="Dashboard" >
         <Popup Name="DetailsPopup" Placement="Center"  AllowsTransparency="False"  HorizontalAlignment="Center" VerticalAlignment="Top" >
