--- a/src/XelsDesktopWalletApp/Views/Pages/HistoryPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/HistoryPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="750"
-      Title="HistoryPage">
+      Title="HistoryPage" Loaded="Page_Loaded">
 
     <Border  Background="White"  CornerRadius="8" Margin="10 0 0 10">
 
